<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GridImageSearch</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="query_hint">Enter Search Term</string>
    <string name="search_label">Search</string>
    <string name="title_activity_image_display">ImageDisplayActivity</string>
    <string name="title_activity_search_filters">SearchFiltersActivity</string>
    <string name="filter_title">Advanced search options</string>
    <string name="save">Save</string>
    <string name="size_prompt">Image Size</string>
    <string name="color_prompt">Color Filter</string>
    <string name="type_prompt">Image Type</string>
    <string name="site_prompt">Site Filter</string>
    <string name="site_hint">Enter a site</string>
    <string name="set_advanced_filters">Set Advanced Filters</string>
    

    <string-array name="size_array">
        <item>any</item>
        <item>small</item>
        <item>medium</item>
        <item>large</item>
        <item>xlarge</item>
    </string-array>

    <string-array name="color_array">
        <item>any</item>
        <item>black</item>
        <item>blue</item>
        <item>brown</item>
        <item>gray</item>
        <item>green</item>
        <item>orange</item>
        <item>pink</item>
        <item>purple</item>
        <item>red</item>
        <item>teal</item>
        <item>white</item>
        <item>yellow</item>
    </string-array>

    <string-array name="type_array">
        <item>any</item>
        <item>face</item>
        <item>photo</item>
        <item>clipart</item>
        <item>lineart</item>
    </string-array>
        <string name="more">...</string>

</resources>
