<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SearchFiltersActivity" >

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:onClick="onSave"
        android:text="@string/save" />

    <TextView
        android:id="@+id/tvFilterTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/filter_title"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/spnSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/tvFilterTitle"
        android:layout_toRightOf="@+id/textView1"
        android:entries="@array/size_array" />

    <Spinner
        android:id="@+id/spnType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/spnColor"
        android:layout_toRightOf="@+id/TextView02" />

    <Spinner
        android:id="@+id/spnColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/spnSize"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/spnSize" />

    <EditText
        android:id="@+id/etSite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/spnType"
        android:ems="10"
        android:hint="@string/site_hint" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/TextView02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/spnType"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="9dp"
        android:text="@string/type_prompt" />

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/spnColor"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="9dp"
        android:text="@string/color_prompt" />

    <TextView
        android:id="@+id/TextView03"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/etSite"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="9dp"
        android:text="@string/site_prompt" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/spnSize"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="9dp"
        android:text="@string/size_prompt" />

</RelativeLayout>
